--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,4 @@ language: php
 php:
   - 7.0
 
-before_script:
-  - wget https://phar.phpunit.de/phpunit-6.1.phar
-  - chmod +x phpunit-6.1.phar
-  - sudo mv phpunit-6.1.phar /usr/local/bin/phpunit
-  - phpunit --version
-script: phpunit
+script: vendor/bin/phpunit
