--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ php:
   - 7.0
 before_script:
     - composer install
+    - php artisan key:generate
+    - php artisan config:clear
 script: phpunit
